# land-drone

./: .gitignore  LICENSE  README.md
cloud-server/: Dockerfile  app.yaml  package-lock.json  package.json  run.cmd  tsconfig.json
cloud2/: Dockerfile  detector.py  image_transmitter.py  image_unpacker.py  logger.py  main.py  requirements.txt  results.txt  streamer.py  test.py  transmit_full_image.py  udp.py  web.py  ws.py
desktop-image-viewer/: package-lock.json  package.json  tsconfig.json
desktop-viewer/: requirements.txt
doc/: .gitignore  apendix.tex  test.py  thesis.bib  thesis.tex
drone-control/: Dockerfile  package-lock.json  package.json
drone-image-receiver/: package.json
drone-node/: package-lock.json  package.json  test.js  tsconfig.json
drone-posix/: package-lock.json  package.json
drone-posix/cpp/: CMakeLists.txt  common.h  consumer.cpp  main.cpp  producer.cpp
drone-python/: camera.py  engine.py  engine_builder.py  engine_control.py  engine_test.py  main.py  requirements.txt
face-detection/: faced_example.py  haar_face_detection.py  human_detection.py
face-recognition-opencv/: box_converter.py  common.py  db_driver.py  docker-compose.yml  encode_faces.py  encodings.pickle  hog_detector.py  recognize_faces_image.py  resources.yml
face_detection/: common.py  converter.py  face_detecter.py  fr_utils.py  haar_face_detection.py  human_detection.py  inception_blocks_v2.py  logger.py  model.yml  mtcnn_example.py  package-lock.json  parse_images.py  requirements.txt  research.md  test.py  trainer1.py  trainer2.py  utils.py
(+143 files in other folders)
